[front-end] , [common] - Logo configurable in config
Updates to configSlice.ts, CwmLogo.ts and contract.ts, logo data added to dataset-A/config.json
