# libs/common/src/api/contract.ts
@@ -110,7 +110,17 @@ const ConfigData = z.object({
   vocabs: VocabIndex,
   itemProps: PropSpecs,
   languages: z.array(Iso639Set1Code).nonempty(),
-  ui: z.object({ directory_panel_field: z.string() }),
+  ui: z.object({
+    directory_panel_field: z.string(),
+    logo: z
+      .object({
+        showLogo: z.boolean(),
+        largeLogo: z.string().optional(),
+        smallLogo: z.string().optional(),
+        altText: z.string().optional(),
+      })
+      .optional(),
+  }),
 });
 const BuildInfo = z.object({
   name: z.string(),
